Endpoint to get configured card sets - closes #58.
